/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.auth;

message Auth1 {
    string username = 1;
    string t = 2;
}

message Auth2 {
    string username = 1;
    string r = 2;
    string c = 3;
}

message Response {
    string token = 1;
    string c = 2;
    Error error = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

service AuthService {
    rpc AuthRPC1(Auth1) returns (Response) {}
    rpc AuthRPC2(Auth2) returns (Response) {}
}